# secure-share-server

./: Cargo.toml  README.md  build.sh  vercel.json
src/: config.rs  main.rs  middleware.rs
src/controllers/: auth_controller.rs  file_controller.rs  mod.rs  user_controller.rs
src/dtos/auth/: get_user_dto.rs  login_user_dto.rs  mod.rs  refresh_token_dto.rs  register_user_dto.rs
src/dtos/file/: delete_file.rs  get_files.rs  mod.rs  retrieve_file.rs  upload_file.rs
src/models/: file_model.rs  mod.rs  share_link_model.rs  user_model.rs
src/services/: db.rs
src/utils/: keys.rs  mod.rs  password.rs  token.rs
src/utils/file/: decrypt.rs  encrypt.rs
